# testtask

./: .env.example  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg  test.txt
backend/apps/auth/: urls.py
backend/apps/users/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_auto_20250423_1304.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: jwt_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/management/commands/: wait_db.py
backend/core/services/: file_service.py
backend/storage/base_ranks/: init_ranks.json
backend/templates/: certificate.html
client/: index.html
client/assets/: LoginPage-Ii9HuQxY.js  MainPage-D4hZuYfa.js  RegisterPage-D65QuGL2.js  auth.service-DQORs1I6.js  index-C6yf6C18.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/login/: Login.tsx
frontend/src/components/main-page-info/: MainPageInfo.tsx
frontend/src/components/menu/: Menu.tsx
frontend/src/components/pagination/: Pagination.tsx
frontend/src/components/register/: RegisterForm.tsx
frontend/src/components/validator/: login.validator.ts  register.validator.ts
frontend/src/constants/: urls.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/models/pagination-resp/: IPaginationResp.ts
frontend/src/routes/: constants.ts  routes.tsx
frontend/src/services/: api.service.ts  auth.service.ts  certificate.service.ts  profile.service.ts
(+9 files in other folders)
